// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Badge > has accent variant 1`] = `
<DocumentFragment>
  <span
    class="badge badge-accent text-xs rounded-md"
  >
    accent badge
  </span>
</DocumentFragment>
`;

exports[`Badge > has error variant 1`] = `
<DocumentFragment>
  <span
    class="badge badge-error text-xs rounded-md"
  >
    error badge
  </span>
</DocumentFragment>
`;

exports[`Badge > has ghost variant 1`] = `
<DocumentFragment>
  <span
    class="badge badge-ghost text-xs rounded-md"
  >
    ghost badge
  </span>
</DocumentFragment>
`;

exports[`Badge > has info variant 1`] = `
<DocumentFragment>
  <span
    class="badge badge-info text-xs rounded-md"
  >
    info badge
  </span>
</DocumentFragment>
`;

exports[`Badge > has large (lg) size 1`] = `
<DocumentFragment>
  <span
    class="badge badge-ghost badge-lg rounded-md"
  >
    large
  </span>
</DocumentFragment>
`;

exports[`Badge > has medium (md) size 1`] = `
<DocumentFragment>
  <span
    class="badge badge-ghost badge-md rounded-md"
  >
    medium
  </span>
</DocumentFragment>
`;

exports[`Badge > has neutral variant 1`] = `
<DocumentFragment>
  <span
    class="badge badge-neutral text-xs rounded-md"
  >
    neutral badge
  </span>
</DocumentFragment>
`;

exports[`Badge > has no outline 1`] = `
<DocumentFragment>
  <span
    class="badge badge-ghost text-xs rounded-md"
  >
    Badge has no outline
  </span>
</DocumentFragment>
`;

exports[`Badge > has outline 1`] = `
<DocumentFragment>
  <span
    class="badge badge-ghost badge-outline text-xs rounded-md border-base-300"
  >
    Badge has outline
  </span>
</DocumentFragment>
`;

exports[`Badge > has primary variant 1`] = `
<DocumentFragment>
  <span
    class="badge badge-primary text-xs rounded-md"
  >
    primary badge
  </span>
</DocumentFragment>
`;

exports[`Badge > has secondary variant 1`] = `
<DocumentFragment>
  <span
    class="badge badge-secondary text-xs rounded-md"
  >
    secondary badge
  </span>
</DocumentFragment>
`;

exports[`Badge > has small (sm) size 1`] = `
<DocumentFragment>
  <span
    class="badge badge-ghost badge-sm rounded-md"
  >
    small
  </span>
</DocumentFragment>
`;

exports[`Badge > has success variant 1`] = `
<DocumentFragment>
  <span
    class="badge badge-success text-xs rounded-md"
  >
    success badge
  </span>
</DocumentFragment>
`;

exports[`Badge > has tiny (xs) size 1`] = `
<DocumentFragment>
  <span
    class="badge badge-ghost badge-xs rounded-md"
  >
    tiny
  </span>
</DocumentFragment>
`;

exports[`Badge > has warning variant 1`] = `
<DocumentFragment>
  <span
    class="badge badge-warning text-xs rounded-md"
  >
    warning badge
  </span>
</DocumentFragment>
`;
